<resources>
    <string name="app_name">keyence_btreader</string>
    <string name="app_title">Keyence Bluetooth Reader</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="barcode_hint">Barcode</string>
    <string name="select_btn">Select Bluetooth Device</string>
    <string name="view_log">View Log</string>

    <string name="export_csv">Export to CSV</string>
    <string name="delete_all_logs">Delete All Logs</string>
    <string name="log_title">Scanned Log</string>
    <string name="recycler_header_time">Timestamp</string>
    <string name="recycler_header_barcode">Barcode</string>
    <string name="recycler_header_status">Status</string>
    <string name="alert_del_log_title">Confirm clearing all logs?</string>
    <string name="alert_del_log_desc">All logs will be deleted forever!</string>
    <string name="alert_file_log_title">File Saved Successfully!</string>
    <string name="alert_file_log_desc">File saved to Downloads/KeyenceLogs</string>
    <string name="clear_filter">Clear Filter</string>
</resources>