<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/background_primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.log_screen.LogScreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout_log_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <ImageView
                android:id="@+id/imgview_log_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtview_log_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <TextView
                android:id="@+id/txtview_log_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/log_title"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/imgview_log_back"
                app:layout_constraintEnd_toStartOf="@+id/btn_log_clear"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <Button
                android:id="@+id/btn_log_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_all_logs"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/txtview_log_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/edttxt_search_barcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:padding="10dp"
            android:inputType="text"
            android:hint="@string/barcode_hint"
            android:background="@drawable/edit_text_bg"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintTop_toBottomOf="@+id/constraintlayout_log_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgbtn_search_date"
            />

        <ImageButton
            android:id="@+id/imgbtn_search_date"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_date"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toEndOf="@+id/edttxt_search_barcode"
            app:layout_constraintEnd_toStartOf="@+id/btn_filter_clear"
            app:layout_constraintTop_toTopOf="@+id/edttxt_search_barcode"
            app:layout_constraintBottom_toBottomOf="@+id/edttxt_search_barcode"
            />

        <Button
            android:id="@+id/btn_filter_clear"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/clear_filter"
            android:textSize="12sp"
            android:minHeight="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            app:layout_constraintHorizontal_weight="1.2"
            app:layout_constraintStart_toEndOf="@+id/imgbtn_search_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edttxt_search_barcode"
            app:layout_constraintBottom_toBottomOf="@+id/edttxt_search_barcode"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout_log_recycler_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edttxt_search_barcode"
            app:layout_constraintBottom_toTopOf="@+id/recyclerview_log"
            >
            <TextView
                android:id="@+id/txtview_reycler_timestamp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="2"
                android:text="@string/recycler_header_time"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtview_reycler_barcode"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/txtview_reycler_barcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/recycler_header_barcode"
                android:textStyle="bold"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/txtview_reycler_timestamp"
                app:layout_constraintEnd_toStartOf="@+id/txtview_reycler_status"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <TextView
                android:id="@+id/txtview_reycler_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/recycler_header_status"
                android:textStyle="bold"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/txtview_reycler_barcode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_log"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintlayout_log_recycler_header"
            app:layout_constraintBottom_toTopOf="@+id/btn_log_export"
        />

        <Button
            android:id="@+id/btn_log_export"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export_csv"

            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>